removing libs from linkt input and adding #pragma instead

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,8 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/autoprox.sln.old
+/autoprox.sln.old
+/autoprox/autoprox - Copie.cpp
+*.old
+/autoprox.zip
