Moving error handling functions to separate errorstr.cpp file

--- a/autoprox/autoprox.vcxproj.filters
+++ b/autoprox/autoprox.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="errorstr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
